# AutoConverter

./: .gitignore  CMakeLists.txt  README.md  config - TEMPLATE.txt
Examples/FindObjectLocation/: config.txt
SRC/classes/: Config.cpp  Controller.cpp  Controller.h  Converter.cpp  Reader.cpp  Reader.h  Writer.cpp
exsamples/FindObjectLocation/: output.ahk  output.csv
src/: main.cpp
src/classes/: Config.cpp  Config.h  Consts.h  Controller.cpp  Controller.h  Converter.cpp  Converter.h  Reader.cpp  Reader.h  UI.cpp  UI.h  Writer.cpp  Writer.h
